[gd_scene load_steps=5 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://NodeList.gd" type="Script" id=2]
[ext_resource path="res://NodeSelector.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="NodeList" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel" type="Panel" parent="Control"]
margin_right = 112.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )

[node name="NodeSelector" type="VBoxContainer" parent="Control/Panel"]
margin_right = 112.0
margin_bottom = 600.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_left = 112.0
margin_right = 1025.0
margin_bottom = 24.0
custom_styles/panel = SubResource( 1 )

[node name="SaveButton" type="Button" parent="Panel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 43.0
margin_bottom = 22.0
text = "Save"

[node name="DeleteButton" type="Button" parent="Panel"]
margin_left = 47.0
margin_top = 2.0
margin_right = 102.0
margin_bottom = 22.0
text = "Delete"

[node name="NameField" type="LineEdit" parent="Panel"]
margin_left = 104.0
margin_right = 162.0
margin_bottom = 24.0
placeholder_text = "[name]"

[node name="NInputsField" type="LineEdit" parent="Panel"]
margin_left = 162.0
margin_right = 220.0
margin_bottom = 24.0
text = "0"

[node name="NOutputsField" type="LineEdit" parent="Panel"]
margin_left = 220.0
margin_right = 278.0
margin_bottom = 24.0
text = "0"

[connection signal="pressed" from="Panel/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Panel/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="text_changed" from="Panel/NameField" to="." method="_on_NameField_text_changed"]
[connection signal="text_changed" from="Panel/NInputsField" to="." method="_on_NInputsField_text_changed"]
[connection signal="text_changed" from="Panel/NOutputsField" to="." method="_on_NOutputsField_text_changed"]
